--- a/Google-Bard-Gruvbox-Light.user.css
+++ b/Google-Bard-Gruvbox-Light.user.css
@@ -1,7 +1,8 @@
         /* ==UserStyle==
 @name         Google Bard Gruvbox Light
 @namespace    github/bilalazh
-@version      1.0.1
+@version      1.0.0
+@updateURL   https://stylishthemes.github.io/GitHub-Dark/github-dark.user.css
 @description  "A Light Theme for Google Bard \"bard.google.com\""
 @author       heybilalazhar@gmail.com
 @license      NO-REDISTRIBUTION==/UserStyle== */
