--- a/Google-Bard-Gruvbox-Light.user.css
+++ b/Google-Bard-Gruvbox-Light.user.css
@@ -2,7 +2,7 @@
 @name         Google Bard Gruvbox Light
 @namespace    github/bilalazh
 @version      1.0.0
-@updateURL   https://stylishthemes.github.io/GitHub-Dark/github-dark.user.css
+@updateURL   https://raw.github.com/bilalazh/Google-Bard-Gruvbox-Light/blob/main/Google-Bard-Gruvbox-Light.user.css
 @description  "A Light Theme for Google Bard \"bard.google.com\""
 @author       heybilalazhar@gmail.com
 @license      NO-REDISTRIBUTION==/UserStyle== */
